# CodeReview-Professional-Workflow

./: Dockerfile  LICENSE  README.md  __init__.py  app.py  author.py  bugs.json  client.py  environment.py  grader.py  models.py  openenv.yaml  pyproject.toml  redteam.py  requirements-training.txt  requirements.txt  rltool.py  rubrics.py  test_runner.py  training.py  training_data.json
server/: Dockerfile  __init__.py  app.py  requirements.txt
server /: app.py
