[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code_review_professional"
version = "1.0.0"
description = "Multi‑turn code review environment with AST injection, DPO training, and author negotiation"
authors = [{name = "yuvraj gupta", email = "yuvraj467229@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "unsloth>=2025.3.1",
    "trl>=0.15.0",
    "accelerate>=1.2.0",
    "pylint>=3.3.0",
    "sentence-transformers>=3.3.0",
    "datasets>=3.3.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "isort>=5.0"]

[tool.openenv]
server = "server.app:app"